src/objects/Fielo_ParametrosLifeMiles__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Parámetros de las integraciones de LifeMiles</description>
    <fields>
        <fullName>TER_ENDPOINT_REDENCION__c</fullName>
        <description>EndPoint Redención</description>
        <inlineHelpText>EndPoint Redención</inlineHelpText>
        <label>EndPoint Redención</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TER_ENDPOINT_VM__c</fullName>
        <description>EndPoint para el servicio de LifeMiles =&gt; Validate Member</description>
        <inlineHelpText>EndPoint para el servicio de LifeMiles =&gt; Validate Member</inlineHelpText>
        <label>EndPoint Validate Member</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TER_ENDPOINT_VST__c</fullName>
        <description>EndPoint para el servico de LifeMiles =&gt; Validate Security Token</description>
        <inlineHelpText>EndPoint para el servico de LifeMiles =&gt; Validate Security Token</inlineHelpText>
        <label>EndPoint Validate Security Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TER_ENDPOINT__c</fullName>
        <label>EndPoint Acumulación</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TER_PASSWORD__c</fullName>
        <label>TER_PASSWORD</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TER_SENDER_CODE__c</fullName>
        <label>TER_SENDER_CODE</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TER_TIMEOUT__c</fullName>
        <label>TER_TIMEOUT</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TER_USERNAME__c</fullName>
        <label>TER_USERNAME</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Fielo - Parámetros LifeMiles</label>
</CustomObject>